# mac-finder

./: README.md  package.json  setup.cfg  setup.py
scripts/: .finder-alias.applescript  .finder-close-bg.applescript  .finder-close-duplicates.applescript  .finder-comment.applescript  .finder-icon.applescript  .finder-reveal.applescript  .finder-selection.applescript  finder  finder-alias  finder-close-bg  finder-close-duplicates  finder-comment  finder-exec  finder-frontmost  finder-icon  finder-reveal  finder-selection
