# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-finder
version = 2019.5.11
url = https://github.com/looking-for-a-job/mac-finder
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Finder

[options]
install_requires =
	setuptools
scripts =
	scripts/.finder-alias.applescript
	scripts/.finder-comment.applescript
	scripts/.finder-icon.applescript
	scripts/.finder-reveal.applescript
	scripts/.finder-selection.applescript
	scripts/finder
	scripts/finder-alias
	scripts/finder-comment
	scripts/finder-exec
	scripts/finder-icon
	scripts/finder-reveal
	scripts/finder-selection
